fix(Dashboard): increase z-index of button

--- a/client/views/dashboard/dashboard.import.styl
+++ b/client/views/dashboard/dashboard.import.styl
@@ -3,6 +3,7 @@
 
     &__add-expense-button
         position: fixed
+        z-index: 3
         bottom: 0
         left: 0
         padding: rem(6) 0 0
